<resources>
    <string name="app_name">Vooov</string>
    <string name="base_number">0</string>
    <string name="image_description_profile_logo">Logo du profil</string>
    <string name="burger_account">MON COMPTE</string>
    <string name="burger_home">PAGE D\'ACCUEIL</string>
    <string name="burger_studio">STUDIO</string>
    <string name="burger_my_records">MES ENREGISTREMENTS</string>
    <string name="burger_wallet">PORTE MOON</string>
    <string name="burger_offos">OFFO\'S</string>
    <string name="burger_friends">COMMUNAUTÉ</string>
    <string name="burger_logout">DÉCONNEXION</string>
    <string name="top_settings">Settings</string>
    <string name="connexion_page_title">@string/app_name</string>
    <string name="connexion_mail">Email</string>
    <string name="connexion_mail_text_input">Votre email</string>
    <string name="connexion_password">Mot de passe</string>
    <string name="connexion_password_text_input">passe</string>
    <string name="connexion_login">Connexion</string>
    <string name="connexion_continue_without_conexion">Continuer sans me connecter</string>
    <string name="connexion_dont_have_account">Vous n\'avez pas de compte?</string>
    <string name="connexion_inscription_link">Inscrivez vous</string>
    <string name="register_page_title">@string/app_name</string>
    <string name="register_page_name">Inscription</string>
    <string name="register_mail">Email</string>
    <string name="register_mail_text_input">Entrez votre email</string>
    <string name="register_password">Mot de passe</string>
    <string name="register_password_text_input">Choisissez un mot de passe</string>
    <string name="register_confirm_password">Confirmation du mot de passe</string>
    <string name="register_name">Nom</string>
    <string name="register_name_text_input">Entrez votre nom</string>
    <string name="register_pseudo">Pseudo</string>
    <string name="register_pseudo_text_input">Choisissez un pseudo</string>
    <string name="register_firstname">Prénom</string>
    <string name="register_firstname_text_input">Entrez votre prénom</string>
    <string name="register_confirm_password_text_input">Confirmez votre mot de passe</string>
    <string name="register_birthday">Age</string>
    <string name="register_birthday_text_input">Votre date de naissance</string>
    <string name="register_phone_number">Numéro de téléphone</string>
    <string name="register_phone_number_text_input">Entrez un numéro de téléphone</string>
    <string name="register_register">S\'inscrire</string>
    <string name="home_record_artist_name">Name</string>
    <string name="home_record_title">Title</string>
    <string name="home_record_voice">Voice Type</string>
    <string name="home_record_kind">Kind</string>
    <string name="home_record_description">Description</string>
    <string name="send_moons_titlel">ENVOYER DES MOONS</string>
    <string name="send_moons_send">Envoyer</string>
    <string name="send_moons_go_to_record">Se rendre sur la fiche</string>
    <string name="record_artist_name">@string/home_record_artist_name</string>
    <string name="record_add_offo">AJOUTER LE OFFO</string>
    <string name="record_send_moons">envoyer des moons</string>
    <string name="record_send_button">Envoyer</string>
    <string name="record_page_record_date">01/01/2023</string>
    <string name="record_page_go_to_artist">Voire l\'artiste</string>
    <string name="record_ask_voice_over">DEMANDE DE VOIX OFF</string>
    <string name="record_record_title">@string/home_record_title</string>
    <string name="record_kind">@string/home_record_kind</string>
    <string name="record_page_voice_style">@string/home_record_voice</string>
    <string name="message_page_title">MESSAGERIE</string>
    <string name="message_sender">PSEUDO</string>
    <string name="message_date">00/00/0000 00:00</string>
    <string name="message_text">Message</string>
    <string name="message_search_bar">Rechercher dans mes message</string>
    <string name="research_person_page_title">RECHERCHE</string>
    <string name="research_person_search_bar">Trouver un ami</string>
    <string name="research_person_user">Utilisateurs</string>
    <string name="research_person_record">enregistrement</string>
    <string name="research_person_categories">CATÉGORIES</string>
    <string name="research_person_voice_over">Voix-off</string>
    <string name="research_person_culture">Culture</string>
    <string name="research_person_Sing">Chant</string>
    <string name="research_person_fun">Humour</string>
    <string name="research_person_actuality">Actualités</string>
    <string name="research_person_stranger">Accent étranger</string>
    <string name="research_person_covers">Reprises</string>
    <string name="research_person_voice_type">TYPE DE VOIX</string>
    <string name="research_person_soprano">Soprano</string>
    <string name="research_person_mezzo_soprano">Mezzo-Soprano</string>
    <string name="research_person_contralto">Contralto</string>
    <string name="research_person_contre_tenor">Contre-Ténor</string>
    <string name="research_person_tenor">Ténor</string>
    <string name="research_person_baryton">Baryton</string>
    <string name="research_person_basse">Basse</string>
    <string name="settings_page_title">PARAMETRES</string>
    <string name="settings_informations">Mes informations</string>
    <string name="settings_mail">Email</string>
    <string name="settings_pseudo">Pseudo</string>
    <string name="settings_name">Nom</string>
    <string name="settings_firstname">Prénom</string>
    <string name="settings_password">Mot de passe</string>
    <string name="settings_legal">Mentions légales</string>
    <string name="settings_confirm_password">Confirmation du mot de passe</string>
    <string name="settings_logout">Déconnexion</string>
    <string name="settings_modify">Modifier</string>
    <string name="settings_delete_account">Supprimer le compte</string>
    <string name="personal_profil_page_title">MON NOM</string>
    <string name="personal_profil_informations">MES INFORMATIONS</string>
    <string name="personal_profil_mail">MAIL</string>
    <string name="personal_profil_modify">MODIFIER</string>
    <string name="personal_profil_biographie">BIOGRAPHIE</string>
    <string name="personal_profil_pseudo">Pseudo</string>
    <string name="personal_profil_firstname">Prénom</string>
    <string name="personal_profil_biographie_text">Texte de présentation</string>
    <string name="personal_profil_wallet">Porte-moon</string>
    <string name="personal_profil_community">Communauté</string>
    <string name="personal_profil_my_records">MES ENREGISTREMENTS</string>
    <string name="personal_profil_artist_name">@string/home_record_artist_name</string>
    <string name="personal_profil_record_title">@string/home_record_title</string>
    <string name="personal_profil_record_kind">@string/home_record_kind</string>
    <string name="personal_profil_record_voice_style">@string/home_record_voice</string>
    <string name="artist_profil_name">@string/home_record_artist_name</string>
    <string name="artist_profil_add_offo">Se Connecter</string>
    <string name="artist_profil_add_to_listen">Ecouter</string>
    <string name="artist_profil_ask_for_voice_over">DEMANDE DE VOIX OFF</string>
    <string name="artist_profil_friends">Nombre d\'amis</string>
    <string name="artist_profil_followers">Nombre de spectateurs</string>
    <string name="artist_profil_record_list">LISTE DES ENREGISTREMENTS</string>
    <string name="artist_profil_record_title">@string/home_record_title</string>
    <string name="artist_profil_record_kind">@string/home_record_kind</string>
    <string name="artist_profil_record_voice_style">@string/home_record_voice</string>
    <string name="studio_page_title">STUDIO</string>
    <string name="studio_record_name">Nom de l\'enregistrement</string>
    <string name="category_page_title">MODIFIER</string>
    <string name="category_title">Title</string>
    <string name="category_price">prix : </string>
    <string-array name="category_category">CATÉGORIES
        <item name="category_category_item_voice_over">Voix-Off</item>
        <item name="category_category_item_culture">Culture</item>
        <item name="category_category_item_sing">Chant</item>
        <item name="category_category_item_Humour">Humour</item>
        <item name="category_category_item_news">Actualités</item>
        <item name="category_category_item_foreigner_accent">Accent Étranger</item>
        <item name="category_category_item_cover">Reprise</item>
    </string-array>
    <string-array name="category_voice_type">TYPE DE VOIX
        <item name="category_voice_type_item_soprano">Soprano</item>
        <item name="category_voice_type_item_mezzo_soprano">Mezzo-Soprano</item>
        <item name="category_voice_type_item_contralto">Contralto</item>
        <item name="category_voice_type_item_contre_tenor">Contre-Ténor</item>
        <item name="category_voice_type_item_tenor">Ténor</item>
        <item name="category_voice_type_item_baryton">Baryton</item>
        <item name="category_voice_type_item_basse">Basse</item>
    </string-array>
    <string name="category_throw_inline">Mettre en ligne</string>
    <string name="comuntity_list_page_title">MA COMMUNAUTÉ</string>
    <string name="comuntity_list_friends_name">NOM</string>
    <string name="conversations_research_hint">Rechercher une conversation</string>
    <string name="offos_list_page_title">MES OFFOS</string>
    <string name="offos_list_offos_name">NOM</string>
    <string name="wallet_page_title">PORTE MOON</string>
    <string name="wallet_edited_moons_number_title">NOMBRE DE MOONS ÉDITÉES</string>
    <string name="wallet_futur_fork_title">PROCHAIN FORK</string>
    <string name="wallet_my_wallet_title">MON PORTE MOON</string>
    <string name="items_users_user_name">Name</string>
    <string name="modify_my_record_page_title">MODIFIER</string>
    <string name="modify_my_record_title">Title</string>
    <string name="modify_my_record_price">prix : </string>
    <string-array name="modify_my_record_category">CATÉGORIES
        <item name="modify_my_record_category_item_voice_over">Voix-Off</item>
        <item name="modify_my_record_category_item_culture">Culture</item>
        <item name="modify_my_record_category_item_sing">Chant</item>
        <item name="modify_my_record_category_item_Humour">Humour</item>
        <item name="modify_my_record_category_item_news">Actualités</item>
        <item name="modify_my_record_category_item_foreigner_accent">Accent Étranger</item>
        <item name="modify_my_record_category_item_cover">Reprise</item>
    </string-array>
    <string-array name="modify_my_record_voice_type">TYPE DE VOIX
        <item name="modify_my_record_voice_type_item_soprano">Soprano</item>
        <item name="modify_my_record_voice_type_item_mezzo_soprano">Mezzo-Soprano</item>
        <item name="modify_my_record_voice_type_item_contralto">Contralto</item>
        <item name="modify_my_record_voice_type_item_contre_tenor">Contre-Ténor</item>
        <item name="modify_my_record_voice_type_item_tenor">Ténor</item>
        <item name="modify_my_record_voice_type_item_baryton">Baryton</item>
        <item name="modify_my_record_voice_type_item_basse">Basse</item>
    </string-array>
    <string name="modify_my_record_delete">supprimer</string>
    <string name="popup_delete_profil_warning">Souhaitez-vous définitivement supprimer votre compte ? (Une fois votre compte supprimé, vous perdrez tous vos enregistrement, contacts et informations)</string>
    <string name="popup_delete_profil_yes">Oui</string>
    <string name="popup_delete_profil_no">No</string>
    <string name="popup_delete_profil_title">Supprimer votre profil</string>
    <string name="popup_delete_profil_confirmation">Votre profil a bien été supprimé. Nous sommes tristes de vous voir partir et espérons vous revoir très vite.</string>
</resources>