<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="70dp"
    android:background="@drawable/background_gradient_view_drawable"
    android:gravity="center">


    <TextView
        android:id="@+id/artist_profil_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artist_profil_name"
        style="@style/HomeSub"
        android:gravity="center"
        />

    <ImageView
        android:id="@+id/artist_profil_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/image_description_profile_logo"/>

    <Button
        android:id="@+id/artist_profil_friends_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist_profil_add_offo"
        />

    <TextView
        android:id="@+id/artist_profil_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BasicText"
        android:text="@string/artist_profil_friends"/>

    <TextView
        android:id="@+id/artist_profil_number_of_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BasicText"
        android:text="@string/base_number"/>

    <Button
        android:id="@+id/artist_profil_ask_for_vooov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist_profil_ask_for_voice_over"
        />

    <Button
        android:id="@+id/artist_profil_record_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist_profil_record_list"
        />

    <ProgressBar
        android:id="@+id/artist_profil_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:max="100"
        android:indeterminate="true"
        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
        android:indeterminateDuration="650"
        android:indeterminateDrawable="@drawable/custom_progress_bar_drawable"
        android:gravity="center"
        />

</LinearLayout>